--- a/archives/toutiao-search/2023-10-27.md
+++ b/archives/toutiao-search/2023-10-27.md
@@ -1,56 +1,78 @@
 # 2023-10-27
 
-共 406 条
+共 423 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 27 2023 22:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Oct 27 2023 23:00:47 GMT+0800 (China Standard Time) -->
 1. [李克强同志讣告发布](https://so.toutiao.com/search?keyword=李克强同志讣告发布)
 1. [李克强同志遗像发布](https://so.toutiao.com/search?keyword=李克强同志遗像发布)
 1. [神十七乘组进行航天技术试验亮点](https://so.toutiao.com/search?keyword=神十七乘组进行航天技术试验亮点)
 1. [吴尊友因胰腺癌去世](https://so.toutiao.com/search?keyword=吴尊友因胰腺癌去世)
-1. [印度军队向巴基斯坦开火](https://so.toutiao.com/search?keyword=印度军队向巴基斯坦开火)
+1. [疑强迫妇女发生关系村支书已停职](https://so.toutiao.com/search?keyword=疑强迫妇女发生关系村支书已停职)
 1. [李克强同志逝世](https://so.toutiao.com/search?keyword=李克强同志逝世)
-1. [法媒震惊中国队赢了面包“世界杯”](https://so.toutiao.com/search?keyword=法媒震惊中国队赢了面包“世界杯”)
-1. [女生花2小时面试3轮一问工资1900](https://so.toutiao.com/search?keyword=女生花2小时面试3轮一问工资1900)
-1. [国家医保局辟谣取消个人医保账户](https://so.toutiao.com/search?keyword=国家医保局辟谣取消个人医保账户)
-1. [佳讯飞鸿：参与神舟十七号通信保障](https://so.toutiao.com/search?keyword=佳讯飞鸿：参与神舟十七号通信保障)
-1. [吴尊友曾回应三年白头：不算什么](https://so.toutiao.com/search?keyword=吴尊友曾回应三年白头：不算什么)
-1. [成都春熙路一男子当街拦车被撞身亡](https://so.toutiao.com/search?keyword=成都春熙路一男子当街拦车被撞身亡)
-1. [央视报道员的家遭以军空袭](https://so.toutiao.com/search?keyword=央视报道员的家遭以军空袭)
-1. [高福：吴尊友是真正的流行病学家](https://so.toutiao.com/search?keyword=高福：吴尊友是真正的流行病学家)
+1. [印度军队向巴基斯坦开火](https://so.toutiao.com/search?keyword=印度军队向巴基斯坦开火)
 1. [苏炳添世界排名消失](https://so.toutiao.com/search?keyword=苏炳添世界排名消失)
-1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
+1. [国家医保局辟谣取消个人医保账户](https://so.toutiao.com/search?keyword=国家医保局辟谣取消个人医保账户)
+1. [极氪001 FR上市 零售价76.9万起](https://so.toutiao.com/search?keyword=极氪001+FR上市 零售价76.9万起)
+1. [吴尊友曾回应三年白头：不算什么](https://so.toutiao.com/search?keyword=吴尊友曾回应三年白头：不算什么)
 1. [消防员为救人智力退至3岁 妻子发声](https://so.toutiao.com/search?keyword=消防员为救人智力退至3岁+妻子发声)
-1. [男子接手洗车店卖柚子不断有人来洗车](https://so.toutiao.com/search?keyword=男子接手洗车店卖柚子不断有人来洗车)
+1. [美针对哈马斯和伊朗实施新一轮制裁](https://so.toutiao.com/search?keyword=美针对哈马斯和伊朗实施新一轮制裁)
 1. [俄方用什么武器5天击落24架乌军机](https://so.toutiao.com/search?keyword=俄方用什么武器5天击落24架乌军机)
-1. [专家谈马克龙对巴以局势态度的转变](https://so.toutiao.com/search?keyword=专家谈马克龙对巴以局势态度的转变)
-1. [中方回应是否计划同哈马斯接触](https://so.toutiao.com/search?keyword=中方回应是否计划同哈马斯接触)
+1. [法媒震惊中国队赢了面包“世界杯”](https://so.toutiao.com/search?keyword=法媒震惊中国队赢了面包“世界杯”)
+1. [中使馆提醒在缅公民加强安全防范](https://so.toutiao.com/search?keyword=中使馆提醒在缅公民加强安全防范)
+1. [高福：吴尊友是真正的流行病学家](https://so.toutiao.com/search?keyword=高福：吴尊友是真正的流行病学家)
+1. [中美高层频频互动释放何种信号](https://so.toutiao.com/search?keyword=中美高层频频互动释放何种信号)
+1. [女生花2小时面试3轮一问工资1900](https://so.toutiao.com/search?keyword=女生花2小时面试3轮一问工资1900)
+1. [宿舍地板破洞大学生造景填补](https://so.toutiao.com/search?keyword=宿舍地板破洞大学生造景填补)
+1. [央视报道员的家遭以军空袭](https://so.toutiao.com/search?keyword=央视报道员的家遭以军空袭)
 1. [江苏一地收的“人口费”是个什么费](https://so.toutiao.com/search?keyword=江苏一地收的“人口费”是个什么费)
+1. [男子接手洗车店卖柚子不断有人来洗车](https://so.toutiao.com/search?keyword=男子接手洗车店卖柚子不断有人来洗车)
+1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
+1. [女子团建时被组员轮流用水淋头](https://so.toutiao.com/search?keyword=女子团建时被组员轮流用水淋头)
+1. [14岁男孩吃完未熟透烤全羊后肝衰竭](https://so.toutiao.com/search?keyword=14岁男孩吃完未熟透烤全羊后肝衰竭)
+1. [学历和技能哪个对学生更重要](https://so.toutiao.com/search?keyword=学历和技能哪个对学生更重要)
+1. [16家沪市央企控股上市公司路演](https://so.toutiao.com/search?keyword=16家沪市央企控股上市公司路演)
+1. [孙子将老人4万看病钱换成假币](https://so.toutiao.com/search?keyword=孙子将老人4万看病钱换成假币)
+1. [哈马斯代表团与伊朗副外长在俄会见](https://so.toutiao.com/search?keyword=哈马斯代表团与伊朗副外长在俄会见)
+1. [成都春熙路一男子当街拦车被撞身亡](https://so.toutiao.com/search?keyword=成都春熙路一男子当街拦车被撞身亡)
+1. [幼儿园防暴演练厨师抄锅铲追进教室](https://so.toutiao.com/search?keyword=幼儿园防暴演练厨师抄锅铲追进教室)
+1. [多地已发现“加拿大一枝黄花”](https://so.toutiao.com/search?keyword=多地已发现“加拿大一枝黄花”)
+1. [烈士陵园树枝掰开竟是五角星图案](https://so.toutiao.com/search?keyword=烈士陵园树枝掰开竟是五角星图案)
+1. [30岁女子一天5杯咖啡喝成脆骨人](https://so.toutiao.com/search?keyword=30岁女子一天5杯咖啡喝成脆骨人)
+1. [亚残运会有哪些硬核科技](https://so.toutiao.com/search?keyword=亚残运会有哪些硬核科技)
+1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
+1. [iPhone 15提前降价导致销量锐减](https://so.toutiao.com/search?keyword=iPhone+15提前降价导致销量锐减)
+1. [拾荒男子PUA上海7旬老太骗得82万](https://so.toutiao.com/search?keyword=拾荒男子PUA上海7旬老太骗得82万)
+1. [网友称快递疑被人用针扎眼](https://so.toutiao.com/search?keyword=网友称快递疑被人用针扎眼)
+1. [王文银卸任深圳正威集团董事长](https://so.toutiao.com/search?keyword=王文银卸任深圳正威集团董事长)
+1. [男子酒后骑三轮车 遇检查调头就跑](https://so.toutiao.com/search?keyword=男子酒后骑三轮车+遇检查调头就跑)
+1. [中方回应是否计划同哈马斯接触](https://so.toutiao.com/search?keyword=中方回应是否计划同哈马斯接触)
+1. [被狗咬伤女童筹集善款已全部退回](https://so.toutiao.com/search?keyword=被狗咬伤女童筹集善款已全部退回)
+1. [弗格33分历史总得分超孙军](https://so.toutiao.com/search?keyword=弗格33分历史总得分超孙军)
+1. [儿子工地脑出血父亲通宵守在ICU](https://so.toutiao.com/search?keyword=儿子工地脑出血父亲通宵守在ICU)
+1. [沪指收复3000点](https://so.toutiao.com/search?keyword=沪指收复3000点)
+1. [中专生称被学校强制送去厂里拧螺丝](https://so.toutiao.com/search?keyword=中专生称被学校强制送去厂里拧螺丝)
+1. [杭州亚残运会硬地滚球收官](https://so.toutiao.com/search?keyword=杭州亚残运会硬地滚球收官)
+1. [台媒：解放军无人机“绕台一圈”](https://so.toutiao.com/search?keyword=台媒：解放军无人机“绕台一圈”)
+1. [佳讯飞鸿：参与神舟十七号通信保障](https://so.toutiao.com/search?keyword=佳讯飞鸿：参与神舟十七号通信保障)
+1. [专家谈马克龙对巴以局势态度的转变](https://so.toutiao.com/search?keyword=专家谈马克龙对巴以局势态度的转变)
 1. [俄明年将终止与芬兰的边境合作协议](https://so.toutiao.com/search?keyword=俄明年将终止与芬兰的边境合作协议)
 1. [如何跟国民党合作？柯文哲表态](https://so.toutiao.com/search?keyword=如何跟国民党合作？柯文哲表态)
-1. [14岁男孩吃完未熟透烤全羊后肝衰竭](https://so.toutiao.com/search?keyword=14岁男孩吃完未熟透烤全羊后肝衰竭)
 1. [马来西亚总理怒斥以色列罔顾人命](https://so.toutiao.com/search?keyword=马来西亚总理怒斥以色列罔顾人命)
-1. [学历和技能哪个对学生更重要](https://so.toutiao.com/search?keyword=学历和技能哪个对学生更重要)
 1. [胰腺癌为何被称“癌中之王”](https://so.toutiao.com/search?keyword=胰腺癌为何被称“癌中之王”)
 1. [孩子确诊支原体肺炎家长该如何护理](https://so.toutiao.com/search?keyword=孩子确诊支原体肺炎家长该如何护理)
-1. [被狗咬伤女童筹集善款已全部退回](https://so.toutiao.com/search?keyword=被狗咬伤女童筹集善款已全部退回)
-1. [烈士陵园树枝掰开竟是五角星图案](https://so.toutiao.com/search?keyword=烈士陵园树枝掰开竟是五角星图案)
 1. [投资10万开蔬菜店赚钱吗](https://so.toutiao.com/search?keyword=投资10万开蔬菜店赚钱吗)
 1. [泽连斯基感谢美国再援乌1.5亿美元](https://so.toutiao.com/search?keyword=泽连斯基感谢美国再援乌1.5亿美元)
 1. [知名经济学家认为美联储应开始降息](https://so.toutiao.com/search?keyword=知名经济学家认为美联储应开始降息)
 1. [巴基斯坦法院驳回前总理的保释请求](https://so.toutiao.com/search?keyword=巴基斯坦法院驳回前总理的保释请求)
 1. [女子拴绳遛狗被大爷说不要带狗下楼](https://so.toutiao.com/search?keyword=女子拴绳遛狗被大爷说不要带狗下楼)
-1. [幼儿园防暴演练厨师抄锅铲追进教室](https://so.toutiao.com/search?keyword=幼儿园防暴演练厨师抄锅铲追进教室)
 1. [三季度工业利润同比增长7.7%](https://so.toutiao.com/search?keyword=三季度工业利润同比增长7.7%)
 1. [广州地铁禁止万圣节恐怖妆容](https://so.toutiao.com/search?keyword=广州地铁禁止万圣节恐怖妆容)
 1. [听一听航天员的母亲有怎样的嘱托](https://so.toutiao.com/search?keyword=听一听航天员的母亲有怎样的嘱托)
 1. [1-9月全国规上工业企业利润下降9%](https://so.toutiao.com/search?keyword=1-9月全国规上工业企业利润下降9%)
-1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
 1. [大学生的一天](https://so.toutiao.com/search?keyword=大学生的一天)
 1. [侯友宜回应赖清德演讲被大学生批评](https://so.toutiao.com/search?keyword=侯友宜回应赖清德演讲被大学生批评)
 1. [公交上男子站姿怪异乘客暖心救助](https://so.toutiao.com/search?keyword=公交上男子站姿怪异乘客暖心救助)
-1. [宿舍地板破洞大学生造景填补](https://so.toutiao.com/search?keyword=宿舍地板破洞大学生造景填补)
-1. [男子酒后骑三轮车 遇检查调头就跑](https://so.toutiao.com/search?keyword=男子酒后骑三轮车+遇检查调头就跑)
 1. [呼和浩特部分派出所撤销辖区调整](https://so.toutiao.com/search?keyword=呼和浩特部分派出所撤销辖区调整)
 1. [媒体：烟草反腐风暴未停](https://so.toutiao.com/search?keyword=媒体：烟草反腐风暴未停)
 1. [黎以临时边界地区继续发生交火](https://so.toutiao.com/search?keyword=黎以临时边界地区继续发生交火)
@@ -62,19 +84,15 @@
 1. [四季度全社会用电量增速预计超过7%](https://so.toutiao.com/search?keyword=四季度全社会用电量增速预计超过7%)
 1. [中缅商人谈缅北多地爆发战事](https://so.toutiao.com/search?keyword=中缅商人谈缅北多地爆发战事)
 1. [重庆永川两家医院涉嫌骗保3.3亿元](https://so.toutiao.com/search?keyword=重庆永川两家医院涉嫌骗保3.3亿元)
-1. [中专生称被学校强制送去厂里拧螺丝](https://so.toutiao.com/search?keyword=中专生称被学校强制送去厂里拧螺丝)
 1. [女子洗衣服不慎落水邻居飞奔救人](https://so.toutiao.com/search?keyword=女子洗衣服不慎落水邻居飞奔救人)
 1. [招商局、中石化等多家央企领导调整](https://so.toutiao.com/search?keyword=招商局、中石化等多家央企领导调整)
 1. [北向资金全天净买入46.68亿元](https://so.toutiao.com/search?keyword=北向资金全天净买入46.68亿元)
 1. [男子私自销售柴油被判15年](https://so.toutiao.com/search?keyword=男子私自销售柴油被判15年)
 1. [重庆被指虚设公立学校“空挂”编制](https://so.toutiao.com/search?keyword=重庆被指虚设公立学校“空挂”编制)
-1. [16家沪市央企控股上市公司路演](https://so.toutiao.com/search?keyword=16家沪市央企控股上市公司路演)
 1. [网信办：网络欺凌行为将被记录在案](https://so.toutiao.com/search?keyword=网信办：网络欺凌行为将被记录在案)
 1. [中外车企合作迎来新机遇](https://so.toutiao.com/search?keyword=中外车企合作迎来新机遇)
 1. [外媒：美已准备从黎以撤走本国公民](https://so.toutiao.com/search?keyword=外媒：美已准备从黎以撤走本国公民)
-1. [儿子工地脑出血父亲通宵守在ICU](https://so.toutiao.com/search?keyword=儿子工地脑出血父亲通宵守在ICU)
 1. [吴尊友因病逝世 中疾控发布讣告](https://so.toutiao.com/search?keyword=吴尊友因病逝世+中疾控发布讣告)
-1. [沪指收复3000点](https://so.toutiao.com/search?keyword=沪指收复3000点)
 1. [极兔李杰：不后悔进入中国市场](https://so.toutiao.com/search?keyword=极兔李杰：不后悔进入中国市场)
 1. [金融专家谈美国高利率政策](https://so.toutiao.com/search?keyword=金融专家谈美国高利率政策)
 1. [日媒：美国摇摆不定渐失巴以信任](https://so.toutiao.com/search?keyword=日媒：美国摇摆不定渐失巴以信任)
@@ -237,7 +255,6 @@
 1. [龙洲股份一字涨停晋级6连板](https://so.toutiao.com/search?keyword=龙洲股份一字涨停晋级6连板)
 1. [新一轮油价调整11月7日开启](https://so.toutiao.com/search?keyword=新一轮油价调整11月7日开启)
 1. [巴方：加沙已有7000多人死于以轰炸](https://so.toutiao.com/search?keyword=巴方：加沙已有7000多人死于以轰炸)
-1. [iPhone 15提前降价导致销量锐减](https://so.toutiao.com/search?keyword=iPhone+15提前降价导致销量锐减)
 1. [大空头狙击美债爆赚180亿](https://so.toutiao.com/search?keyword=大空头狙击美债爆赚180亿)
 1. [利拉德与字母哥的挡拆组合初露锋芒](https://so.toutiao.com/search?keyword=利拉德与字母哥的挡拆组合初露锋芒)
 1. [吉林预计秋粮年产量850亿斤](https://so.toutiao.com/search?keyword=吉林预计秋粮年产量850亿斤)
